2007-05-30  Sebastian Marsching  <sebastian.marsching@1und1.de>

	* src/de/schlund/pfixcore/util/CheckIncludes.java: 
	Fixed bug causing check includes utility to use wrong path names
	
	* projects/core/xsl/utils.xsl: 
	Minor changes in javascript code for edit console

2007-05-30  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: small cleanups 

2007-05-29  Martin Leidig  <mleidig@schlund.de>

	* projects/core/build/create_apacheconf.xsl: Removed the FollowSymLinks 
	option from the Location section, because it's ignored by Apache. Removed 
	the AllowOverride directive too, because it's only valid inside Directory 
	sections. Perhaps we should remove the entire section, but using Options
	without + or -, they aren't merged with other default options and some
	environments might have less restrictive defaults and could rely on  
	disabling some options (and enabling CGI execution via ExecCGI).

2007-05-29  Martin Leidig  <mleidig@schlund.de>

	* src/de/schlund/pfixxml/ServletManager.java: Improved ExceptionProcessor
	retrieval. Now we retrieve the configured ExceptionProcessor by walking
	up the throwable's type hierarchy via reflection.

2007-05-25  jtl  <jtl@schlund.de>

	* src/de/schlund/pfixcore/util/DumpText.java: 
	* src/de/schlund/pfixcore/util/ImportText.java: new tools to dump and 
	import used include parts 
	* projects/dumptext.sh:
	* projects/importtext.sh: use the tools above.

2007-05-14  Martin Leidig  <mleidig@schlund.de>

	Fixed race condition in iframe fallback handling.
	Changed fallback HTML element names to allow simultaneous
	usage of both request implementations:

	* projects/core/script/httpRequest.js
	* projects/core/script/xmlRequest.js

	Added service request dumping support (especially for 
	improved, more verbose, exception reporting).

	* src/de/schlund/pfixcore/webservice/ServiceRuntime.java
	* src/de/schlund/pfixcore/webservice/ServiceRequest.java
	* src/de/schlund/pfixcore/webservice/jsonws/JSONWSProcessor.java