@@ -1,6 +1,9 @@
 package de.schlund.pfixcore.util;
 
 import java.io.File;
+import java.io.UnsupportedEncodingException;
+import java.security.MessageDigest;
+import java.security.NoSuchAlgorithmException;
 import java.util.Iterator;
 import java.util.TreeSet;
 
@@ -9,6 +12,7 @@ import javax.xml.parsers.DocumentBuilderFactory;
 import org.apache.log4j.xml.DOMConfigurator;
 import org.w3c.dom.Document;
 import org.w3c.dom.Element;
+import org.w3c.dom.NamedNodeMap;
 import org.w3c.dom.Node;
 import org.w3c.dom.NodeList;
 
@@ -128,10 +132,10 @@ public class DumpText {
     }
     
     private void handleInclude(Element root, AuxDependencyInclude aux) throws Exception {
-        Path path = aux.getPath();
-        String part          = aux.getPart();
-        String theme         = aux.getTheme();
-        Document doc         = root.getOwnerDocument();
+        Path path    = aux.getPath();
+        String part  = aux.getPart();
+        String theme = aux.getTheme();
+        Document doc = root.getOwnerDocument();
 
         IncludeDocumentFactory incfac = IncludeDocumentFactory.getInstance();
         Document incdoc  = incfac.getIncludeDocument(path, true).getDocument();
@@ -163,6 +167,8 @@ public class DumpText {
                 }
             }
             if (themenode != null) {
+                String check = md5ForNode(themenode);
+                partelem.setAttribute("CHECK", check);
                 partelem.setAttribute("THEME", retrieveTheme(aux));
                 NodeList nlist = themenode.getChildNodes();
                 for (int i = 0; i < nlist.getLength(); i++) {
@@ -170,9 +176,48 @@ public class DumpText {
                     partelem.appendChild(node);
                 }
             } else {
-                System.out.print("\nDidn't find matching theme in part " + part + "@" + path.getRelative() + " for theme " + theme + "!");
+                System.out.print("\nDidn't find matching theme '" + theme + "' in part " + part + "@" + path.getRelative() + "!");
             }
         }
     }
 
+    public static String md5ForNode(Node root) throws Exception {
+        StringBuffer check = new StringBuffer();
+        stringForNode(root, check);
+        // System.out.println("->" + check.toString() + "<-");
+        return DumpText.format(check.toString());
+    }
+    
+    private static void stringForNode(Node root, StringBuffer checkstring) throws Exception {
+        NodeList nl = root.getChildNodes();
+        int length = nl.getLength();
+        for (int m = 0; m < length; m++) {
+            Node node = (Node) nl.item(m);
+            if (node.getNodeType() == Node.ELEMENT_NODE) {
+                checkstring.append(node.getNodeName());
+                NamedNodeMap map =  node.getAttributes();
+                for (int k = 0; k < map.getLength(); k++) {
+                    Node   attr     = map.item(k);
+                    String attrname = attr.getNodeName();
+                    // We should better discard "alt" and "title" for the checksum...
+                    if (!attrname.equals("alt") && !attrname.equals("title")) {
+                        checkstring.append(attrname + attr.getNodeValue());
+                    }
+                }
+                stringForNode(node, checkstring);
+            }
+        }
+    }
+    
+    private static String format(String check) throws NoSuchAlgorithmException, UnsupportedEncodingException {
+        check = check.replaceAll(" ","");
+        MessageDigest md5 = MessageDigest.getInstance("MD5");
+        md5.update(check.getBytes("ISO-8859-1"));
+        byte[] end = md5.digest();
+        String digest = "";
+        for (int i = 0; i < end.length; i++) {
+            digest += ((end[i] & 0xff) < 16 ? "0" : "") + Integer.toHexString(end[i] & 0xff);
+        }
+        return digest;
+    }
 }
